#5 BOARD 게시판 이미지: 첨부, 첨부파일 삭제, 이미지 첨부된 게시글 삭제, 수정, 올리기 (완) 게시판 댓글 모달창으로 댓글 입력(완) 리스트에서 제목 바로 옆에 댓글 수 확인 가능